--- a/package.json
+++ b/package.json
@@ -44,11 +44,18 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.16",
+    "@lottiefiles/lottie-interactivity": "^1.6.2",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "gsap": "^3.12.2",
+    "hover-effect": "^1.2.1",
     "inputmask": "^5.0.8",
     "jquery": "^3.7.0",
+    "jquery-mousewheel": "^3.1.13",
     "lottie-web": "^5.12.2",
-    "swiper": "^10.0.4"
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "smooth-scrollbar": "^8.8.4",
+    "swiper": "^10.0.4",
+    "three": "^0.154.0"
   }
 }
